# AKKU

./: .gitignore  ARCHITECTURE.md  COMMENTING.md  CONTRIBUTING.md  Cargo.toml  FailuresCases_ServicesModule.rs  ModulesManager.md  Modulesmanager.md  README.md  TODO.md
_archive/api/: imperative_backup.rs
api/: Cargo.toml
api/src/: future.rs  imperative_backup.rs  lib.rs  service_validator.rs
cli/: Cargo.toml
cli/doc/: help.txt
cli/docs/: help.txt
cli/src/: history.rs  main.rs
engine/: Cargo.toml
engine/src/: action_result_formatter.rs  dry_run.rs  executor.rs  future_idea.rs  lib.rs  lib_backup.rs  module_resolver.rs  plan_store.rs  planner.rs  snapshot.rs
engine/src/executor/: mod.rs  services.rs
engine/src_backup/: executor.rs  future.rs  planner.rs  snapshot.rs
modules/logger/: Cargo.toml
modules/logger/src/: lib.rs
modules/services/: Cargo.toml
modules/services/docs/: help.txt
modules/services/src/: current_state.rs  error_catcher.rs  lib.rs  state_helpers.rs  systemctl_queries.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: api.rs  main.rs
ui_concept/: akku.html  services.html  yast3.html
