[workspace]
resolver = "3"
members = [
    "cli",
    "api",
    "engine",
    "modules/services",
]
default-members = ["cli"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Allow for better optimizations at the cost of compile time
panic = 'abort'     # Remove stack unwinding (further reduces size)

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
