[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
shared_libs = { path = "../shared" }
#fs = { path = "../modules/fs" }
#network = { path = "../modules/network" }
#package = { path = "../modules/package" }
services = { path = "../modules/services" }
