[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
serde_json = { workspace = true }
serde = { workspace = true }
shared_libs = { path = "../shared_libs" }
#network = { path = "../modules/network" }
#package = { path = "../modules/package" }
services = { path = "../modules/services" }
